<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginVertical="44dp"
        android:layout_marginHorizontal="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        style="@style/todo_subtitle"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvcategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_tasks"
        style="@style/todo_subtitle"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvtasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>